--- a/style.css
+++ b/style.css
@@ -1,16 +1,25 @@
-body{
-            margin: 0 auto;
-            overflow:hidden;
-        }
-            canvas {
-                background: rgb(2,0,36);
-background: -moz-linear-gradient(0deg, rgba(2,0,36,1) 0%, rgba(121,9,65,1) 100%, rgba(2,0,36,1) 100%);
-background: -webkit-linear-gradient(0deg, rgba(2,0,36,1) 0%, rgba(121,9,65,1) 100%, rgba(2,0,36,1) 100%);
-background: linear-gradient(0deg, rgba(2,0,36,1) 0%, rgba(121,9,65,1) 100%, rgba(2,0,36,1) 100%);
-filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#020024",endColorstr="#020024",GradientType=1);
-            }
+@import url('https://fonts.googleapis.com/css?family=Audiowide&display=swap');
 
-            #game-over {
+html,body{
+  margin: 0 auto;
+  overflow:hidden;
+  background: rgb(2,0,36);
+  background: -moz-linear-gradient(0deg, rgba(2,0,36,1) 0%, rgba(121,9,65,1) 100%, rgba(2,0,36,1) 100%);
+  background: -webkit-linear-gradient(0deg, rgba(2,0,36,1) 0%, rgba(121,9,65,1) 100%, rgba(2,0,36,1) 100%);
+  background: linear-gradient(0deg, rgba(2,0,36,1) 0%, rgba(121,9,65,1) 100%, rgba(2,0,36,1) 100%);
+  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#020024",endColorstr="#020024",GradientType=1);
+  width: 100%;
+  height: 100%;
+  font-family: 'Audiowide', Arial;
+}
+canvas {
+  background: rgb(2,0,36);
+  background: -moz-linear-gradient(0deg, rgba(2,0,36,1) 0%, rgba(121,9,65,1) 100%, rgba(2,0,36,1) 100%);
+  background: -webkit-linear-gradient(0deg, rgba(2,0,36,1) 0%, rgba(121,9,65,1) 100%, rgba(2,0,36,1) 100%);
+  background: linear-gradient(0deg, rgba(2,0,36,1) 0%, rgba(121,9,65,1) 100%, rgba(2,0,36,1) 100%);
+  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#020024",endColorstr="#020024",GradientType=1);
+}
+#game-over {
   text-align: center;
   padding-top: 92px;
   z-index: 2;
@@ -19,19 +28,21 @@ filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#020024",endCo
   overflow: auto;
   margin: auto;
   position: absolute;
-  background-color: rgba(20, 20, 20, 0.5);
+  background-color: rgba(20, 20, 20, 0.657);
   color: #fff;
-  font-family:Arial, Helvetica, sans-serif;
+  font-family: 'Audiowide', Arial;
 }
 /* Button: Neon */
 .button.neon,
 button.neon {
   border-radius: 0.4em;
   font-weight: 400;
+  font-family: 'Audiowide', Arial;
   padding: 1em;
   letter-spacing: 0.04em;
   background: transparent !important;
   border: 0.1em solid hsl(0, 0%, 100%);
+  border: 0;
   color: hsl(0, 0%, 100%);
   text-shadow: hsl(0, 0%, 100%) 0px 0px 0.15em, hsl(0, 0%, 100%) 0px 0px 0.3em, hsl(0, 0%, 100%) 0px 0px 0.45em, hsl(308, 100%, 50%) 0px 0px 0.3em, hsl(308, 100%, 50%) 0px 0px 0.52em, hsl(308, 100%, 50%) 0px 0px 0.6em, hsl(308, 100%, 50%) 0px 0px 0.75em;
   box-shadow: hsl(0, 0%, 100%) 0px 0px 0.075em, hsl(0, 0%, 100%) 0px 0px 0.15em, hsl(0, 0%, 100%) 0px 0px 0.22em, hsl(308, 100%, 50%) 0px 0px 0.3em, hsl(308, 100%, 50%) 0px 0px 0.52em, hsl(308, 100%, 50%) 0px 0px 0.6em, hsl(308, 100%, 50%) 0px 0px 0.75em, inset hsl(308, 100%, 50%) 0 0 0.6em;
@@ -40,17 +51,80 @@ button.neon {
 button.neon:hover{
   text-shadow: hsl(0, 0%, 100%) 0px 0px 0.3em, hsl(0, 0%, 100%) 0px 0px 0.6em, hsl(0, 0%, 100%) 0px 0px 0.9em, hsl(308, 100%, 50%) 0px 0px 0.6em, hsl(308, 100%, 50%) 0px 0px 1.04em, hsl(308, 100%, 50%) 0px 0px 1.2em, hsl(308, 100%, 50%) 0px 0px 1.5em;
   box-shadow: hsl(0, 0%, 100%) 0px 0px 0.15em, hsl(0, 0%, 100%) 0px 0px 0.3em, hsl(0, 0%, 100%) 0px 0px 0.44em, hsl(308, 100%, 50%) 0px 0px 0.6em, hsl(308, 100%, 50%) 0px 0px 1.04em, hsl(308, 100%, 50%) 0px 0px 1.2em, hsl(308, 100%, 50%) 0px 0px 1.5em, inset hsl(308, 100%, 50%) 0 0 1.2em;
-    cursor: pointer;
+  cursor: pointer;
 }
 .neonText {
-    text-shadow: hsl(0, 0%, 100%) 0px 0px 0.1em, hsl(0, 0%, 100%) 0px 0px 0.3em, hsl(0, 0%, 100%) 0px 0px 0.4em, hsl(308, 100%, 50%) 0px 0px 0.3em, hsl(308, 100%, 50%) 0px 0px .4em, hsl(308, 100%, 50%) 0px 0px .1em, hsl(308, 100%, 50%) 0px 0px .3em;
-    color: hsl(0, 0%, 100%);
+  text-shadow: hsl(0, 0%, 100%) 0px 0px 0.3em, hsl(0, 0%, 100%) 0px 0px 0.6em, hsl(0, 0%, 100%) 0px 0px 0.9em, hsl(308, 100%, 50%) 0px 0px 0.6em, hsl(308, 100%, 50%) 0px 0px 1.04em, hsl(308, 100%, 50%) 0px 0px 1.2em, hsl(308, 100%, 50%) 0px 0px 1.5em;
+  color: hsl(0, 0%, 100%);
+}
+.neonText2 {
+  text-shadow: hsl(0, 0%, 100%) 0px 0px 0.05em, hsl(0, 0%, 100%) 0px 0px 0.05em, hsl(0, 0%, 100%) 0px 0px 0.05em, hsl(308, 100%, 50%) 0px 0px 0.1em, hsl(308, 100%, 50%) 0px 0px 0.8em, hsl(308, 100%, 50%) 0px 0px 0.1em, hsl(308, 100%, 50%) 0px 0px 0.1em;
+  color: hsl(0, 0%, 100%);
 }
 .neonTextDanger {
-    text-shadow: hsl(0, 0%, 100%) 0px 0px 0.1em, hsl(0, 0%, 100%) 0px 0px 0.3em, hsl(0, 0%, 100%) 0px 0px 0.4em, hsl(355, 100%, 50%) 0px 0px 0.3em, hsl(355, 100%, 50%) 0px 0px .4em, hsl(355, 100%, 50%) 0px 0px .1em, hsl(355, 100%, 50%) 0px 0px .3em;
-    color: hsl(0, 0%, 100%);
+  text-shadow: hsl(0, 0%, 100%) 0px 0px 0.1em, hsl(0, 0%, 100%) 0px 0px 0.3em, hsl(0, 0%, 100%) 0px 0px 0.4em, hsl(355, 100%, 50%) 0px 0px 0.3em, hsl(355, 100%, 50%) 0px 0px .4em, hsl(355, 100%, 50%) 0px 0px .1em, hsl(355, 100%, 50%) 0px 0px .3em;
+  color: hsl(0, 0%, 100%);
+}
+button.neonNoOutline {
+  font-weight: 400;
+  padding: 1em;
+  letter-spacing: 0.04em;
+  background: transparent !important;
+  border: 0;
+  outline: none;
+  color: hsl(0, 0%, 100%);
+  text-shadow: hsl(0, 0%, 100%) 0px 0px 0.15em, hsl(0, 0%, 100%) 0px 0px 0.3em, hsl(0, 0%, 100%) 0px 0px 0.45em, hsl(308, 100%, 50%) 0px 0px 0.3em, hsl(308, 100%, 50%) 0px 0px 0.52em, hsl(308, 100%, 50%) 0px 0px 0.6em, hsl(308, 100%, 50%) 0px 0px 0.75em;
+}
+button.neonNoOutline:hover {
+  text-shadow: hsl(0, 0%, 100%) 0px 0px 0.3em, hsl(0, 0%, 100%) 0px 0px 0.6em, hsl(0, 0%, 100%) 0px 0px 0.9em, hsl(308, 100%, 50%) 0px 0px 0.6em, hsl(308, 100%, 50%) 0px 0px 1.04em, hsl(308, 100%, 50%) 0px 0px 1.2em, hsl(308, 100%, 50%) 0px 0px 1.5em;
+  cursor: pointer;
+}
+#tryAgain,#mainMenu {
+  font-size: 1em;
 }
 #wrapper {
-    overflow:hidden;
+  overflow:hidden;
 }
-/* END OF NEON*/
+/* MAIN MENU */
+#mainContainer {
+  height: 100%;
+  -webkit-box-align:center;
+  -webkit-box-pack:center;
+  display:-webkit-box;
+}
+#titleContainer {
+  position: relative;
+  height: 150px;
+  width: 250px;
+  -webkit-perspective: 200px;
+  perspective: 200px;
+  top: -5em;
+}
+#mainTitle {
+  padding: 0px;
+  position: absolute;
+  -webkit-transform-style: preserve-3d;
+  -webkit-transform: rotateX(45deg);
+  transform-style: preserve-3d;
+  transform: rotateX(45deg);
+  font-size: 4em;
+  font-family: 'Audiowide', 'Arial';
+  color: #fff;
+}
+#buttonsContainer {
+  text-align: center;
+}
+.long-btn {
+  font-size: 2em;
+  margin-top: -1em;
+  font-family: 'Audiowide', Arial;
+}
+/*Instructions*/
+#how-to-play {
+  text-align: center;
+  margin-top: -5em;
+}
+
+.turo {
+  cursor: pointer;
+}
